--- a/events.html
+++ b/events.html
@@ -17,13 +17,54 @@
         <ul>
           <li><a href="index.html">Accueil</a></li>
           <li><a href="events.html">Evénements</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="#id01">Contact</a></li>
         </ul>
       </nav>
     </header>
     <main class="events">
-        <h1>Bienvenue sur notre page événementielle</h1>
-        <h2>Actualités des louves en séléctions régionale ou nationale</h2>
+      <div id="id01" class="modal">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <form action="" method="post">
+                <fieldset>
+                  <a href="#" class="closebtn">×</a> 
+                </fieldset>
+                <fieldset>
+                    <legend>Vous pouvez nous appeler au 06 25 25 25 25 ou nous envoyer un message à l'aide de ce formulaire</legend>
+                    <div>
+                      <input type="radio" id="Mme" name="civilite" value="Mme">
+                      <label for="Mme" class="inline-label">Madame</label>
+                    </div>
+                    <div>
+                        <input type="radio" id="Mr" name="civilite" value="Mr">
+                        <label for="Mr" class="inline-label">Monsieur</label>
+                    </div>
+                    <label for="firstName">Prénom</label>
+                    <input type="text" name="firstName" id="firstName" required placeholder="Votre prénom">
+  
+                    <label for="lastName">Nom</label>
+                    <input type="text" name="lastName" id="lastName" required placeholder="Votre nom">
+  
+                    <label for="birthDate">Date de naissance</label>
+                    <input type="date" name="birthDate" id="birthDate">
+  
+                    <label for="phoneNumber">Numéro de téléphone</label>
+                    <input type="tel" name="phoneNumber" id="phoneNumber" placeholder="Votre numéro de téléphone">
+  
+                    <label for="email">Adresse e-mail</label>
+                    <input type="email" name="email" id="email" required placeholder="Votre adresse e-mail">
+  
+                    <label for="message">Message</label>
+                    <textarea name="message" id="message" cols="30" rows="10" placeholder="Votre message"></textarea>
+                
+                    <button class="styled" type="button">Envoi du message</button>
+                </fieldset>
+              </form>
+          </div>
+        </div>
+      </div> 
+      <h1>Bienvenue sur notre page événementielle</h1>
+      <h2>Actualités des louves en séléctions régionale ou nationale</h2>
       <article class="container">
         <section>
           <h3 class="withoutH4">Anne-Sophie: Joueuse du match contre la Britich Navy !</h3>
