modification du formulaire de contact

--- a/events.html
+++ b/events.html
@@ -25,20 +25,14 @@
       <div id="id01" class="modal">
         <div class="modal-dialog">
           <div class="modal-content">
-            <form action="" method="post">
+            <form action="contact.php" method="post">
                 <fieldset>
                   <a href="#" class="closebtn">×</a> 
+                  <p>Vous pouvez nous appeler au 06 25 25 25 25 ou nous envoyer un message</p>
                 </fieldset>
                 <fieldset>
-                    <legend>Vous pouvez nous appeler au 06 25 25 25 25 ou nous envoyer un message à l'aide de ce formulaire</legend>
-                    <div>
-                      <input type="radio" id="Mme" name="civilite" value="Mme">
-                      <label for="Mme" class="inline-label">Madame</label>
-                    </div>
-                    <div>
-                        <input type="radio" id="Mr" name="civilite" value="Mr">
-                        <label for="Mr" class="inline-label">Monsieur</label>
-                    </div>
+                    <legend>Formulaire de Contact</legend>
+    
                     <label for="firstName">Prénom</label>
                     <input type="text" name="firstName" id="firstName" required placeholder="Votre prénom">
   
