correction du BEM

--- a/events.html
+++ b/events.html
@@ -51,7 +51,7 @@
                     <label for="message">Message</label>
                     <textarea name="message" id="message" cols="30" rows="10" placeholder="Votre message"></textarea>
                 
-                    <button class="styled" type="button">Envoi du message</button>
+                    <button class="submit-button" type="button">Envoi du message</button>
                 </fieldset>
               </form>
           </div>
@@ -61,18 +61,18 @@
       <h2>Actualités des louves en séléctions régionale ou nationale</h2>
       <article class="container">
         <section>
-          <h3 class="withoutH4">Anne-Sophie: Joueuse du match contre la Britich Navy !</h3>
-          <img src="images/selectionVsNavyAS.jpg" alt="Photo musculation" class="landscapePicsEvents">
+          <h3 class="without-h4">Anne-Sophie: Joueuse du match contre la Britich Navy !</h3>
+          <img src="images/selectionVsNavyAS.jpg" alt="Photo match contre la British Navy" class="landscape-pics-events">
           <p>Le 15 juin, lors de la rencontre entre la séléction Occitanie et celle de la British Navy, Anne-Sophie Carnus à été élue par le staff Anglais et le publique, meilleure joueuse du match ! Petite anecdote: La séléction Occitanie a joué dans le maillot exterieur des louves...</p>
         </section>
         <section>
-          <h3 class="withoutH4">Mélina et Pernelle retenues en équipe de France U18</h3>
-          <img src="images/MelinaPernelle.jpg" alt="Photo d'entrainements" class="landscapePicsEvents">
+          <h3 class="without-h4">Mélina et Pernelle retenues en équipe de France U18</h3>
+          <img src="images/MelinaPernelle.jpg" alt="Photo de Mélina et Pernelle en EDF u18" class="landscape-pics-events">
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita molestiae eius nihil reiciendis qui, consequuntur aliquam rerum officiis maiores sequi iusto velit at quae pariatur placeat ut nam ducimus ipsum.</p>
         </section>
         <section>
-          <h3 class="withoutH4">Anne-Sophie: Joueuse du match contre les Anglaises !</h3>
-          <img src="images/AnneSoCadDebEDF.jpg" alt="Photo du match contre Pujols" class="landscapePicsEvents">
+          <h3 class="without-h4">Anne-Sophie: Joueuse du match contre les Anglaises !</h3>
+          <img src="images/AnneSoCadDebEDF.jpg" alt="Photo Anne-So en EDF face aux Anglaises " class="landscape-pics-events">
           <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Similique qui enim esse possimus dignissimos culpa, temporibus explicabo, voluptates iure quisquam labore? Consequatur voluptatum a, pariatur quibusdam totam facere quis eum!</p>
         </section>
       </article>
@@ -81,12 +81,12 @@
       <article class="container">
         <section>
           <h4>Championnat</h4>
-          <img src="images/afficheMatchLouvesClairac.png" alt="affiche du match vs Clairac" class="matchAnnouncement">
+          <img src="images/afficheMatchLouvesClairac.png" alt="affiche du match vs Clairac" class="match-announcement">
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero aspernatur mollitia iusto, voluptates tempora unde autem suscipit ipsum quibusdam ipsa quo in, nemo necessitatibus harum repellendus, possimus minus error ex.</p>
         </section>
         <section>
           <h4>Coupe de France</h4>
-          <img src="images/afficheMatchLouvesOvalie.png" alt="affiche du match vs Ovalie" class="matchAnnouncement">
+          <img src="images/afficheMatchLouvesOvalie.png" alt="affiche du match vs Ovalie" class="match-announcement">
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero ex autem quidem eius, esse quod molestiae rerum, ducimus vero doloribus odit doloremque nesciunt debitis fugiat hic velit quasi ipsum assumenda.</p>
         </section>
       </article>
@@ -94,19 +94,19 @@
       <article class="container">
         <section>
           <h4>Championnat: Victoire à domicile contre Pujols !</h4>
-          <img src="images/matchPujols.jpg" alt="Photo match contre Pujols" class="landscapePicsEvents">
+          <img src="images/matchPujols.jpg" alt="Photo match contre Pujols" class="landscape-pics-events">
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam aliquid doloribus sapiente sunt quod modi adipisci amet distinctio mollitia, dolores exercitationem iure voluptate commodi delectus esse nostrum culpa reiciendis optio.
           Accusantium fugit exercitationem non mollitia assumenda, molestiae delectus illo quod et suscipit repellendus quasi aliquam tempore nisi nam voluptatem vero temporibus alias corrupti hic, numquam nostrum doloribus veritatis. Adipisci, ipsum.</p>
         </section>
         <section>
           <h4>Championnat: Victoire à l'exterieur contre Albi !</h4>
-          <img src="images/cadDebAS.jpg" alt="Photo match à Albi" class="landscapePicsEvents">
+          <img src="images/cadDebAS.jpg" alt="Photo match à Albi" class="landscape-pics-events">
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, sit aliquid ipsa beatae, fugiat eaque aut delectus, assumenda dolor id at nisi quas. Magni voluptatem assumenda voluptas alias neque accusantium.
           Cum deserunt aliquam autem quidem tempora. Ut veritatis non saepe nam sapiente exercitationem atque assumenda ipsam reiciendis expedita, pariatur dolorem at tempora aliquid sit animi optio, nobis quisquam officiis soluta.</p>
         </section>
         <section>
           <h4>Coupe de France: Victoire à dommicile face à Carcassonne !</h4>
-          <img src="images/matchCarcassonne.jpg" alt="Photo musculation" class="landscapePicsEvents">
+          <img src="images/matchCarcassonne.jpg" alt="Photo match contre Carcassonne" class="landscape-pics-events">
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias sunt architecto officiis pariatur dignissimos atque, unde amet aliquam. Suscipit quos illo voluptatem tenetur excepturi tempore commodi autem vel. Suscipit, assumenda!
           Vero animi quidem similique repudiandae sequi et natus nihil voluptatibus. Nostrum, nemo quisquam, quibusdam corrupti dolorem labore sed distinctio soluta veniam accusamus sunt natus commodi vel eum beatae fugiat voluptas!</p>
         </section>
@@ -123,7 +123,7 @@
       </nav>
     </footer>
     <div>
-      <nav class="squareFixed square-wrapper">
+      <nav class="square-fixed square-wrapper">
         <a href="#top"><i class="fa-solid fa-jet-fighter-up"></i></a>
         <a href="#top">remonter</a>
       </nav>
