--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                   <label for="message">Message</label>
                   <textarea name="message" id="message" cols="30" rows="10" placeholder="Votre message"></textarea>
               
-                  <button class="styled" type="button">Envoi du message</button>
+                  <button class="submit-button" type="button">Envoi du message</button>
               </fieldset>
             </form>
         </div>
@@ -61,26 +61,26 @@
     <article class="team">
       <section>
         <h2>L'équipe</h2>
-        <img src="images/equipeLouves.jpg" alt="Photo de l'équipe" class="landscapePicture">
+        <img src="images/equipeLouves.jpg" alt="Photo de l'équipe">
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque minus omnis maxime? Sit cumque necessitatibus iste amet unde ipsum distinctio quaerat, eligendi ipsa doloribus ab architecto officiis, explicabo earum aspernatur.</p>
       </section>
     </article>
     <article class="container">
       <section>
         <h2>Préparation Physique</h2>
-        <img src="images/Anne-So-tractions1.jpg" alt="Photo musculation" class="portraitPicture">
+        <img src="images/Anne-So-tractions1.jpg" alt="Photo musculation" class="portrait-picture">
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam delectus exercitationem reiciendis error reprehenderit sed alias iure dolorum, distinctio dolores quisquam doloribus quis magni cupiditate quibusdam repellendus molestias id eaque.
         Repudiandae omnis vel error numquam maxime vero optio ea quisquam, soluta itaque dolores maiores molestiae ipsam, deleniti qui fugiat! Ad, tempora odio a praesentium veritatis cupiditate labore adipisci accusantium neque.</p>
       </section>
       <section>
         <h2>Entrainements</h2>
-        <img src="images/Entrainement.jpg" alt="Photo d'entrainements" class="portraitPicture">
+        <img src="images/Entrainement.jpg" alt="Photo d'entrainements" class="portrait-picture">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic voluptatem dolores ut culpa fugit minus totam deserunt rem doloribus, iure, officia suscipit, ipsa consequatur quis dolorem possimus nobis dolor reiciendis?
         Quisquam, laudantium impedit ad qui praesentium pariatur maxime neque recusandae dicta suscipit, sapiente molestiae voluptatem debitis natus aspernatur unde tenetur? Tenetur suscipit sunt unde vitae quidem dicta possimus consequuntur eligendi!</p>
       </section>
       <section>
         <h2>Matchs</h2>
-        <img src="images/MatchTO.jpg" alt="Photo du match contre Pujols" class="portraitPicture">
+        <img src="images/MatchTO.jpg" alt="Photo du match contre Pujols" class="portrait-picture">
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis perferendis asperiores ut quo distinctio adipisci commodi, excepturi illum eveniet nemo id sint, alias minima ullam sed. Velit consectetur iure temporibus?
         Libero voluptate exercitationem optio id ipsum ipsa deleniti deserunt. Non impedit officiis delectus quas consequatur suscipit cumque ipsa, molestiae tempore facere quisquam dicta. Deleniti ea consequuntur perferendis quaerat, necessitatibus minima?</p>
       </section>
@@ -97,7 +97,7 @@
     </nav>
   </footer>
   <div>
-    <nav class="squareFixed square-wrapper">
+    <nav class="square-fixed square-wrapper">
       <a href="#top"><i class="fa-solid fa-jet-fighter-up"></i></a>
       <a href="#top">remonter</a>
     </nav>
