modification du back top

--- a/events.html
+++ b/events.html
@@ -123,9 +123,9 @@
       </nav>
     </footer>
     <div>
-      <nav class="square-fixed square-wrapper">
+      <nav class="back-top-fixed back-top-wrapper">
         <a href="#top"><i class="fa-solid fa-jet-fighter-up"></i></a>
-        <a href="#top">remonter</a>
+        <a href="#top">Haut</a>
       </nav>
     </div>
   </body>
